# pre-commit-maven

./: pyproject.toml  setup.cfg
