[project]
name = "pre-commit-maven"
version = "v0.3.3"
dynamic = ["description", "requires-python"]
dependencies = ["ruamel.yaml>=0.15", "toml"]

[project.scripts]
maven = "pre_commit_maven.maven:main"
maven-compile = "pre_commit_maven.maven_compile:main"
maven-test = "pre_commit_maven.maven_test:main"
maven-checkstyle = "pre_commit_maven.maven_checkstyle:main"
maven-spotless-check = "pre_commit_maven.maven_spotless_check:main"
maven-spotless-apply = "pre_commit_maven.maven_spotless_apply:main"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tests = [
  'coverage>=5.0.3',
  'covdefaults',
  'pytest',
  'pytest-benchmark[histogram]>=3.2.1',
  'pytest-mock',
  'tox',
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
